--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-preset-env": "^10.4.0",
     "rimraf": "^6.1.2"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.5"
   }
 }
